[gd_scene load_steps=21 format=3 uid="uid://cfkgjewglxqf6"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_s7t2i"]
[ext_resource type="Shader" path="res://shaders/Baltro.gdshader" id="2_bjjmn"]
[ext_resource type="Texture2D" uid="uid://bxdcqdb5af370" path="res://Art/logo change/Automa logo 4.svg" id="3_p8o12"]
[ext_resource type="FontFile" uid="uid://b4lue4d84htb2" path="res://Fonts/child-witch-font/ChildWitch-z8ABL.ttf" id="4_4f00m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ysaap"]
shader = ExtResource("2_bjjmn")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 1.0
shader_parameter/spin_rotation = null
shader_parameter/spin_speed = 3.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.509804, 0.254902, 0.611765, 1)
shader_parameter/colour_2 = Color(0.213177, 0.0306804, 0.273216, 1)
shader_parameter/colour_3 = Color(0.239376, 0.123986, 0.448528, 1)
shader_parameter/contrast = 1.0
shader_parameter/spin_amount = 0.2
shader_parameter/pixel_filter = 700.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fg8b3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mm1oc"]
bg_color = Color(0.509804, 0.254902, 0.611765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.215686, 0.0901961, 0.266667, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cjwnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7mq0e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nkcrm"]
bg_color = Color(0.509804, 0.254902, 0.611765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eyjy3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ntst3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0tiy"]
bg_color = Color(0.509804, 0.254902, 0.611765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pi1o4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_edkft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popmi"]
bg_color = Color(0.509804, 0.254902, 0.611765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvaas"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n6fh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qw0h5"]
bg_color = Color(0.509804, 0.254902, 0.611765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebtjc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7t2i")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ysaap")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.346
anchor_right = 0.501
anchor_bottom = 0.346
offset_left = -418.152
offset_top = -310.208
offset_right = 418.848
offset_bottom = 242.792
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_p8o12")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.57
anchor_right = 0.5
anchor_bottom = 0.57
offset_left = -129.0
offset_top = 4.63995
offset_right = 143.0
offset_bottom = 270.64

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.866667, 0.639216, 0.0156863, 1)
theme_override_fonts/font = ExtResource("4_4f00m")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_fg8b3")
theme_override_styles/hover = SubResource("StyleBoxFlat_mm1oc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cjwnj")
text = "Start"

[node name="Leaderboard" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.866667, 0.639216, 0.0156863, 1)
theme_override_fonts/font = ExtResource("4_4f00m")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_7mq0e")
theme_override_styles/hover = SubResource("StyleBoxFlat_nkcrm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_eyjy3")
text = "Leaderboards
"

[node name="Test" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.866667, 0.639216, 0.0156863, 1)
theme_override_fonts/font = ExtResource("4_4f00m")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_ntst3")
theme_override_styles/hover = SubResource("StyleBoxFlat_y0tiy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pi1o4")
text = "Story mode
"

[node name="Practice" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.866667, 0.639216, 0.0156863, 1)
theme_override_fonts/font = ExtResource("4_4f00m")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_edkft")
theme_override_styles/hover = SubResource("StyleBoxFlat_popmi")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kvaas")
text = "Practice
"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.866667, 0.639216, 0.0156863, 1)
theme_override_fonts/font = ExtResource("4_4f00m")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_n6fh5")
theme_override_styles/hover = SubResource("StyleBoxFlat_qw0h5")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ebtjc")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/Test" to="." method="_on_pratice_pressed"]
[connection signal="pressed" from="VBoxContainer/Practice" to="." method="_on_practice_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
